--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aula de Canvas">
     <title>Aprendendo Canvas</title>
