--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
 <body>
     <canvas id="jogo" width="700" height="280"></canvas>
-    <button id="atirar">Atirar</button>
+    <!-- <button id="atirar">Atirar</button>
 
     <script>
         let botaoEl = document.querySelector('#atirar');
         botaoEl.addEventListener('click', function(e) {
             alert('Atirou na posição x = ' + e.offsetX + '!!!');
         });
-    </script>
+    </script> -->
 
     <script>
         let canvasEl = document.querySelector('#jogo');
@@ -52,6 +52,7 @@
         canvasEl.addEventListener('mousemove', (evento) => {
             // alert('x = ' + evento.offsetX);
             x = evento.offsetX;
+            ctx.drawImage(imageSprite, x, 50, 80, 90);
         });
     </script>
 </body>
