--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         
         canvasEl.addEventListener('mousemove', (evento) => {
             // alert('x = ' + evento.offsetX);
-            x = evento.offsetX;
-            y = evento.offsetY;
+            megaman.x = evento.offsetX;
+            megaman.y = evento.offsetY;
             // ctx.clearRect(0, 0, 700, 280);
             // ctx.drawImage(imageSprite, x, y, 80, 90);
             desenhaJogo();
